Refactor: MVC structure (tampilan pkg), separate DB Inspector, upgrade libs to latest, fix deprecations & localize errors